# Search-Detect-Land

./: .gitignore  README.md  pyproject.toml
resources/calibration/: cameraMatrix.pkl  dist.pkl
src/Search-Detect-Land/: AprilTagTesting.py  DroneTelemetryTesting.py  MotorSpeed.py
src/Search_Detect_Land.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
