[project]
name = "Search-Detect-Land"
version = "0.1.0"
description = "FPV drone searches for landing spot, detects, and lands on it"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pupil-apriltags>=1.0.4.post11",
    "requests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

